; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_profile.c_profile_event_register.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_profile.c_profile_event_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@task_exit_notifier = common dso_local global i32 0, align 4
@munmap_notifier = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @profile_event_register(i32 %0, %struct.notifier_block* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.notifier_block* %1, %struct.notifier_block** %4, align 8
  %6 = load i32, i32* @EINVAL, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %3, align 4
  switch i32 %8, label %15 [
    i32 128, label %9
    i32 129, label %12
  ]

9:                                                ; preds = %2
  %10 = load %struct.notifier_block*, %struct.notifier_block** %4, align 8
  %11 = call i32 @blocking_notifier_chain_register(i32* @task_exit_notifier, %struct.notifier_block* %10)
  store i32 %11, i32* %5, align 4
  br label %15

12:                                               ; preds = %2
  %13 = load %struct.notifier_block*, %struct.notifier_block** %4, align 8
  %14 = call i32 @blocking_notifier_chain_register(i32* @munmap_notifier, %struct.notifier_block* %13)
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %2, %12, %9
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i32 @blocking_notifier_chain_register(i32*, %struct.notifier_block*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
